created packages for better structure and started implementing the main menu